objects/JBCXM__User_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AccountID__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Subscription</relationshipLabel>
        <relationshipName>User_Subscription</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Subscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Subscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Subscription</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__AccountID__c</columns>
        <columns>JBCXM__Subscribe__c</columns>
        <columns>JBCXM__UserID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Subscribe-{0000}</displayFormat>
        <label>User Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Subscription</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>